--- a/index.css
+++ b/index.css
@@ -14,11 +14,18 @@ body {
 
 .navbar {
   align-self: center;
-  justify-self: end;
-  display: grid;
-  grid-template-areas: "a a a";
-  grid-gap: 1em;
-  grid-auto-columns: auto;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: flex-end;
+  width: 100%;
+  margin: 1em 0;
+  padding: 1em 0;
+  background-color: grey;
+}
+
+.navbar-item {
+  padding: 0 0 0 1em;
+  font-size: 1.5em;
 }
 
 .about-me {
@@ -31,14 +38,15 @@ body {
   grid-gap: 2em;
   grid-auto-columns: 1fr 1fr;
   margin: 0 0.25em;
+  justify-items: center;
 }
 
 .portfolio-header {
   grid-column: span 2;
+  font-size: 2em;
   align-self: center;
   justify-self: center;
 }
 .portfolio-img {
-  width: 100%;
-  border: solid thin black;
+  height: calc((9 / 16) * 30em);
 }
